style.css
* {
    box-sizing: border-box;
    margin: 0;
}

body {
    /* sets the grid */
    display: flex;
    flex-direction: column;
    flex: 1;
}

#header {
    /* current grid */
    display: flex;
    flex-direction: row;
    align-items: center;
    gap: 0.75rem;
    padding: 0.15rem;

    /* style */
    background-color: rgba(240,240,240,1);
}

#header > h1 {
    /* style */
    color: rgba(255,0,176,1);
    /* font-family: "Brush Script MT", cursive; */
    font-family: "Times New Roman";
    font-size: 2rem;
}

#main {
    /* position */
    display: flex;
    flex-direction: column;
    flex: 1;
}

#intro {
    /* position */
    text-align: center;
    margin-top: 0.5rem;

    /* style */
    font-size: 1.125rem;
}

#calculator {
    /* position */
    display: flex;
    flex-direction: column;
}

h2 {
    /* position */
    text-align: center;
    margin-top: 1.5rem;

    /* style */
    font-size: 1.5rem;
    font-weight: bold;
}

hr {
    /* position */
    margin-bottom: 0.5rem;

    /* style */
    border: 1px dotted rgba(255,0,176,0.5);
}

.twobytwo {
    /*children position */
    display: flex;
    flex-direction: row;
    flex-wrap: wrap;
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: 1;
    //display: grid;
    //grid-template-columns: repeat(auto-fill, 1fr); /* see notes below */
    justify-content: space-around;
    align-content: space-around;
}

.table {
    /* children's position */
    display: flex;
    flex-direction: column;
    flex-wrap: wrap;
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: 1;
    justify-content: space-around;
    align-content: space-around;
}

h3 {
    /* position */
    text-align: center;

    /* style */
    font-size: 1.125rem;
    font-weight: bold;
}

.table > div {
    /* position of children */
    display: grid;
    grid-template-columns: auto 1fr;
    grid-auto-flow: row;
    align-content: space-around;
    justify-content: space-around;
    padding: 0.5rem;
    gap: 0.5rem;
    
    /* style */
    border: 1px solid rgba(255,0,176,1);
    border-radius: 24px;
    flex-grow: 1;
    flex-shrink: 1;
    flex-basis: 1;
    //min-width: 0;
    //width: 100%;
    //height:80%;
}

.header {
    /* position */
    text-align: center;

    /* style */
    font-family: "Arial";
    font-weight: bold;
}


.input {
    /* position */
    display: flex;
    flex-direction: row;
    gap: 0.125rem;
    align-items: center;

    /* style */
    border: 1px solid rgba(0,0,0,0.25);
    border-radius: 12px;
    color: rgba(255,0,176,1);
    font-weight: bold;
    margin: 0;
    padding: 0rem 0.5rem 0rem 0.5rem;
}

.auto {
    /* style */
    background-color: rgba(240,240,240,1);
}

.inputtext {
    /* style */
    font-size: 100%;
    min-width: 0;
    max-width: 6rem;
    height: 100%;
    border: none;
    outline: none;
    color: inherit;
}

input#interest {
    transform: scale(1.33);
}

.plus {
    background-color: rgba(0,255,0,1);
    color: rgba(0,0,0,1);
    font-weight: bold;
}

.minus {
    background-color: rgba(255,0,0,1);
    color: rgba(255,255,255,1);
    font-weight: bold;
}

